# arc-projects

./: .gitignore  arc.toml  checkpoint.json  fabro.toml  graph.dot  main.py  manifest.json  playtest.js  playtest.mjs  playtest2.js  review-gpt-test.mjs  review-gpt-test2.mjs  review-verify.mjs  sandbox.json  test_ai_improve.js  test_ai_quick.js  test_ai_reliability.js  test_ai_tracks.js  test_ai_verify.js  test_ai_volcano.js  test_all_tracks.js  test_all_tracks_items.js  test_all_tracks_perf.js  test_all_tracks_visual.js  test_camera.js  test_camera_final.js  test_camera_improve.js  test_camera_improvements.js  test_camera_v2.js  test_camera_verify.js  test_cleanup.js  test_cp_verify.js  test_crash_fix.js  test_crash_verify.js  test_driving_feel.js  test_driving_feel2.js  test_driving_feel_tracks.js  test_driving_tracks.js  test_final_verify.js  test_items.js  (+33 more)
.workflow/: implementation-core.md  implementation-gameplay.md  implementation-polish.md  improve_log.md  improvement.md  plan_final.md  plan_gpt.md  plan_opus.md  playtest-report.md  review_consensus.md  review_gpt.md  review_opus.md  spec-review.md  spec.md  verify-core.md  verify-gameplay-results.json  verify-gameplay.md  verify-results.json
.workflow/screenshots/: console-log.txt
apps/golden-gate/: index.html  package.json
apps/solitaire/: pyproject.toml  review.md  spec.md
apps/solitaire/src/: ui.py
apps/solitaire/tests/: conftest.py  test_game.py  test_ui.py
nodes/debate/: diff.patch  (+3 more)
output/: index.html
solitaire/: README.md
src/: game.py  models.py  ui.py
tests/: test_models.py  test_ui.py
(+342 files in other folders)
