[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "klondike-solitaire"
version = "0.1.0"
description = "Terminal-based Klondike Solitaire in Python"
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["game", "models", "ui"]

[tool.pytest.ini_options]
testpaths = ["tests"]